--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,6 @@
 
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
-  #RewriteCond %{REQUEST_URI} !^(/assets)
+  RewriteCond %{REQUEST_URI} !^(/assets)
   RewriteRule  ^(.*)$ index.php?url=$1 [QSA,L]
 </IfModule>
