--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with: 
         server: ${{ secrets.ftp_host }}
-        username: ${{ sercrets.ftp_user }}
+        username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         port: 21
         server-dir: /
