--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,7 +7,7 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} !^(/assets)
-    RewriteRule ^(.*)$ https://software-framework.com/live/memories/public/index.php?url=$1 [L]
+    RewriteRule ^(.*)$ /index.php?url=$1 [L]
 </IfModule>
 <IfModule mod_expires.c>
  ExpiresActive On
